--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ function login_without_captcha(c){
 	}
 };
 var s = document.createElement('script');
-s.src='http://scu.edu.pl/scu_captcha_recognition/download/recognition.min.js';
+s.src='https://scu.edu.pl/scu_captcha_recognition/download/recognition.min.js';
 document.body.appendChild(s);
 s.onload=function(){
 	document.getElementById('captchaImg').style='display:none';
